--- a/app/templates/recsflix.html
+++ b/app/templates/recsflix.html
@@ -9,7 +9,7 @@
 <div class="container">
   <div class="row justify-content-md-center">
     <div class="col-md-auto">
-      <h1>FriendFlix</h1>
+      <h1>RecsFlix</h1>
     </div>
   </div>
   <!-- 
@@ -21,7 +21,7 @@
   -->
   {% for row in range(rows) %}
   <div class="row justify-content-center">
-    {% for col in range(8) %}
+    {% for col in range(6) %}
     <div class="col">
       <div class="card project_card" style="width: auto">
         <img
