Modify flixlist cards

--- a/app/templates/flixlist.html
+++ b/app/templates/flixlist.html
@@ -92,11 +92,7 @@
         />
         <div class="card-body">
           <h5 class="card-title">Movie (1995)</h5>
-          <p class="card-text">Platform</p>
-          <p class="card-text">Personal rating</p>
-          <p class="card-text">Rating:</p>
-          <p class="card-text">TV Show</p>
-          <p class="card-text">Tags</p>
+          <span class="badge badge-pill badge-success">Currently Watching</span>
           <a href="#" class="btn btn-primary" style="background-color: #e50914"
             >Go somewhere</a
           >
