--- a/app/templates/flixlist.html
+++ b/app/templates/flixlist.html
@@ -94,7 +94,7 @@
           <h5 class="card-title">Movie (1995)</h5>
           <span class="badge badge-pill badge-success">Currently Watching</span>
           <a href="#" class="btn btn-primary" style="background-color: #e50914"
-            >Go somewhere</a
+            >Details</a
           >
         </div>
       </div>
