Sample connection between flixlist and details

--- a/app/templates/flixlist.html
+++ b/app/templates/flixlist.html
@@ -93,7 +93,10 @@
         <div class="card-body">
           <h5 class="card-title">Movie (1995)</h5>
           <span class="badge badge-pill badge-success">Currently Watching</span>
-          <a href="#" class="btn btn-primary" style="background-color: #e50914"
+          <a
+            href="{{url_for('show_details', show_id=1)}}"
+            class="btn btn-primary"
+            style="background-color: #e50914"
             >Details</a
           >
         </div>
