--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -24,7 +24,7 @@
 		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		    <ul class="navbar-nav mr-auto">
 		      <li class="nav-item active">
-		        <a class="nav-link" href="">FlixList <span class="sr-only">(current)</span></a>
+		        <a class="nav-link" href="{{url_for('flixlist', menu_item='All Shows')}}">FlixList <span class="sr-only">(current)</span></a>
 		      </li>
 		      <li class="nav-item active">
 		        <a class="nav-link" href="">FlixHistory <span class="sr-only">(current)</span></a>
