--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -16,30 +16,17 @@
     </head>
     
     <body>
-		<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #E50914;">
-		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		    <span class="navbar-toggler-icon"></span>
-		  </button>
-		
-		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-		    <ul class="navbar-nav mr-auto">
-		      <li class="nav-item active">
-		        <a class="nav-link" href="">FlixList <span class="sr-only">(current)</span></a>
-		      </li>
-		      <li class="nav-item active">
-		        <a class="nav-link" href="">FlixHistory <span class="sr-only">(current)</span></a>
-		      </li>
-		      <li class="nav-item active">
-		        <a class="nav-link" href="">RecsFlix <span class="sr-only">(current)</span></a>
-		      </li>
-			  <li class="nav-item active">
-		        <a class="nav-link" href="">FriendFlix <span class="sr-only">(current)</span></a>
-		      </li>
-			  <li class="nav-item active">
-		        <a class="nav-link" href="">Login <span class="sr-only">(current)</span></a>
-		      </li>
-		  </div>
-		</nav>
+        <footer class="footer-container text-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <p>
+                            Made with 💜 by <a href="https://github.com/Hunajpu" target="_blank" rel="noopener noreferrer">Rodrigo Luna</a>, <a href="https://github.com/truongnguyenlinh" target="_blank" rel="noopener noreferrer">Linh Truong Nguyen</a>  and <a href="https://github.com/nanonite9" target="_blank" rel="noopener noreferrer">Ayana</a>.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </footer>
     
 	    {% block content %}
 	    {% endblock %}
@@ -49,3 +36,8 @@
 	</body>
 
 </html>
+
+
+
+Made with 💜 by Rodrigo Luna, Linh Nguyen Truong, and Ayana Nithey
+
