Change background color again

--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -15,7 +15,7 @@
         <title>{{ title }}</title>
     </head>
     
-    <body style="background-color: #070525">
+    <body>
 		<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #E50914;">
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
