Flixlist page connection to the movie data base

--- a/app/templates/flixlist.html
+++ b/app/templates/flixlist.html
@@ -1,9 +1,12 @@
 {% extends 'header.html' %} {% block content %}
-
 <div class="container">
   <div class="row justify-content-md-center">
     <div class="col-md-auto">
-      <img src="/static/img/flixlist_logo.png" alt="..." class="img-fluid" />
+      <img
+        src="/static/img/flixlist_logo.png"
+        alt="FlixList"
+        class="img-fluid"
+      />
     </div>
   </div>
   <div class="row justify-content-md-center">
@@ -80,21 +83,22 @@
       </form>
     </div>
   </div>
-  {% for row in range(rows) %}
   <div class="row justify-content-center">
-    {% for col in range(4) %}
+    {% for movie in movies_data %}
     <div class="col">
       <div class="card project_card" style="width: auto">
         <img
-          src="/static/img/construction.jpg"
+          src="https://image.tmdb.org/t/p/original/{{ movie['poster_path'] }}"
           class="card-img-top"
-          alt="..."
+          alt="{{ movie['original_title'] }}"
         />
         <div class="card-body">
-          <h5 class="card-title">Movie (1995)</h5>
+          <h5 class="card-title">
+            {{ movie['original_title'] }} ({{ movie['release_date'] }})
+          </h5>
           <span class="badge badge-pill badge-success">Currently Watching</span>
           <a
-            href="{{url_for('show_details', show_id=1)}}"
+            href="{{url_for('show_details', show_id=movie['id'])}}"
             class="btn btn-primary"
             style="background-color: #e50914"
             >Details</a
@@ -104,23 +108,35 @@
     </div>
     {% endfor %}
   </div>
-  {% endfor %}
 </div>
-<body>
-  <footer class="footer-container text-center">
-      <div class="container">
-          <div class="row">
-              <div class="col-xs-12">
-                  <p>
-                      Made with 💜 by <a href="https://github.com/Hunajpu" target="_blank" rel="noopener noreferrer">Rodrigo Luna Reyes</a>, <a href="https://github.com/truongnguyenlinh" target="_blank" rel="noopener noreferrer">Linh Truong</a>  and <a href="https://github.com/nanonite9" target="_blank" rel="noopener noreferrer">Ayana Nithey</a>.
-                  </p>
-              </div>
-          </div>
+<footer class="footer-container text-center">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <p>
+          Made with 💜 by
+          <a
+            href="https://github.com/Hunajpu"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Rodrigo Luna Reyes</a
+          >,
+          <a
+            href="https://github.com/truongnguyenlinh"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Linh Truong</a
+          >
+          and
+          <a
+            href="https://github.com/nanonite9"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Ayana Nithey</a
+          >.
+        </p>
       </div>
-  </footer>
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
+    </div>
+  </div>
+</footer>
 {% endblock %}
