--- a/app/templates/show_details.html
+++ b/app/templates/show_details.html
@@ -2,16 +2,13 @@
 <div class="container" style="margin-top: 20px;">
     <div class="row justify-content-md-center">
         <div class="media">
-        <img class="align-self-center mr-3" src="/static/img/no_image.png" />
+        <img class="align-self-center mr-3" src="https://image.tmdb.org/t/p/original/{{ movie['poster_path'] }}" />
         <div class="media-body">
-            <h3 class="mt-0">Movie Title</h5>
-            <h5 class="mt-0">Movie Year</h5>
+            <h3 class="mt-0">{{ movie['title'] }}</h5>
+            <h5 class="mt-0">{{ movie['release_date'] }}</h5>
             <h4 class="mt-0">Synopsis</h5>
             <p>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
-            scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-            vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
-            vulputate fringilla. Donec lacinia congue felis in faucibus.
+              {{ movie['overview'] }}
             </p>
             <p class="mb-0">
             Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu
@@ -67,7 +64,7 @@
     </div>
     <div class="row justify-content-md-center">
         <div class="col stats-block-1" style="margin-top: 0px;">
-            <span class="shows-detail">8.9</span>
+            <span class="shows-detail">{{ movie['vote_average'] }}</span>
         </div>
         <div class="col stats-block-2" style="margin-top: 0px;">
             <span class="shows-detail">Netflix</span>
