--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -28,16 +28,10 @@
 		        <a class="nav-link" href="{{url_for('flixlist', menu_item='Movies')}}">FlixList <span class="sr-only">(current)</span></a>
 		      </li>
 		      <li class="nav-item active">
-		        <a class="nav-link" href="">FlixHistory <span class="sr-only">(current)</span></a>
-		      </li>
-		      <li class="nav-item active">
-		        <a class="nav-link" href="">RecsFlix <span class="sr-only">(current)</span></a>
+		        <a class="nav-link" href="{{url_for('recsflix')}}">Recommendations <span class="sr-only">(current)</span></a>
 		      </li>
 			  <li class="nav-item active">
-		        <a class="nav-link" href="">FriendFlix <span class="sr-only">(current)</span></a>
-		      </li>
-			  <li class="nav-item active">
-		        <a class="nav-link" href="">Login <span class="sr-only">(current)</span></a>
+		        <a class="nav-link" href="{{url_for('friendflix')}}">FriendFlix <span class="sr-only">(current)</span></a>
 		      </li>
 		  </div>
 		</nav>
