Add Search button functionality

--- a/app/templates/flixlist.html
+++ b/app/templates/flixlist.html
@@ -73,8 +73,10 @@
           type="search"
           placeholder="Search"
           aria-label="Search"
+          name="search"
         />
         <button
+          href="#"
           class="btn btn-primary btn-lg"
           type="submit"
           style="
