Add platform info in details page

--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -42,7 +42,7 @@ h5 {
 .shows-detail {
   font-size: 20px;
   margin: 10px;
-  color: aliceblue;
+  color: white;
 }
 
 /* ========================= friendlist ========================= */
