--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -1,24 +1,71 @@
+/* ========================= Global ========================= */
+img {
+  max-width: 300px;
+  max-height: 100em;
+}
+body {
+  background-color: #070525;
+}
+p {
+  color: white;
+}
+a {
+  color: white;
+}
+h2 {
+  color: white;
+}
+h3 {
+  color: white;
+}
+h4 {
+  color: white;
+}
+h5 {
+  color: white;
+}
+/* ========================= show_details ========================= */
+.stats-block-1 {
+  background-color: #1eb5e7;
+  height: 40px;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.stats-block-2 {
+  background-color: #273e72;
+  height: 40px;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.shows-detail {
+  font-size: 20px;
+  margin: 10px;
+  color: white;
+}
+
 /* ========================= friendlist ========================= */
 
 .card-user-card {
-    border-radius: 50%;
+  border-radius: 50%;
 }
 
 /* ========================= footer ========================= */
 
 h4 > a {
-    margin-right: 10px;
-    margin-left: 10px;
-    color: #56c6aa;
+  margin-right: 10px;
+  margin-left: 10px;
+  color: #56c6aa;
 }
 
 h4 > a:hover {
-    color: #2cc2f1;
+  color: #2cc2f1;
 }
 
 footer {
-    margin-top: 200px;
-    text-align: center;
+  margin-top: 200px;
+  text-align: center;
 }
 
 /* =========================  ========================= */
