--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -7,15 +7,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta property="og:title" content="Flixlist">
 
+		<link rel='icon' href="{{ url_for('static', filename='img/favicon.ico') }}"/>
     
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         
-        <link rel="stylesheet" href="/static/styles/main.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='styles/main.css') }}">
         
         <title>{{ title }}</title>
     </head>
     
-    <body>
+    <body">
 		<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #E50914;">
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
@@ -24,7 +25,7 @@
 		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		    <ul class="navbar-nav mr-auto">
 		      <li class="nav-item active">
-		        <a class="nav-link" href="">FlixList <span class="sr-only">(current)</span></a>
+		        <a class="nav-link" href="{{url_for('flixlist', menu_item='Movies')}}">FlixList <span class="sr-only">(current)</span></a>
 		      </li>
 		      <li class="nav-item active">
 		        <a class="nav-link" href="">FlixHistory <span class="sr-only">(current)</span></a>
