--- a/app/templates/recommendations.html
+++ b/app/templates/recommendations.html
@@ -19,51 +19,130 @@
     </div>
   </div>
   -->
-  {% for row in range(rows) %}
   <div class="row justify-content-center">
-    {% for col in range(6) %}
-    <div class="col">
-      <div class="card project_card" style="width: auto">
+    {% for movie in movies_data %}
+    <div class="col card-group">
+      <div
+        class="card text-white"
+        style="width: auto; background-color: #213465; border-color: #070525"
+      >
         <img
-          src="/static/img/construction.jpg"
+          src="https://image.tmdb.org/t/p/original/{{ movie['poster_path'] }}"
           class="card-img-top"
-          alt="..."
+          alt="{{ movie['title'] }}"
         />
         <div class="card-body">
-            <h5 class="card-title">Movie (1995) {user.image}</h5>
-            <p class="card-text">Platform:</p>
-            <p class="card-text">Duration:</p>
-            <p class="card-text">Type:</p>
-            <p class="card-text">Genre:</p>
-            <p class="card-text">Rating:</p>
-            <p class="card-text">Tags</p>
-            <p class="card-text">Recommended by: {user}</p>
-          <a href="#" class="btn btn-primary" style="background-color: #e50914"
-            >Add to FlixList</a
+          <span class="badge badge-pill badge-success">Currently Watching</span>
+          <h5 class="card-title">
+            {{ movie['title'] }} ({{ movie['release_date'].split("-")[0] }})
+          </h5>
+          <h5 class="card-text" style="color: #213465">White Space</h5>
+
+          <a
+            href="{{ url_for('main.details', type='Movies', id=movie['id']) }}"
+            class="btn btn-primary"
+            style="
+              background-color: #e50914;
+              border-color: #213465;
+              position: absolute;
+              bottom: 0;
+              left: 0;
+              right: 0;
+              margin: auto;
+            "
+            >Details</a
           >
         </div>
       </div>
     </div>
     {% endfor %}
   </div>
-  {% endfor %}
-</div>
+  <div class="row justify-content-center">
+    {% for tv in tv_data %}
+    <div class="col card-group">
+      <div
+        class="card text-white"
+        style="width: auto; background-color: #213465; border-color: #070525"
+      >
+        <img
+          src="https://image.tmdb.org/t/p/original/{{ tv['poster_path'] }}"
+          class="card-img-top"
+          alt="{{ tv['title'] }}"
+        />
+        <div class="card-body">
+          <span class="badge badge-pill badge-success">Currently Watching</span>
+          <h5 class="card-title">
+            {{ tv['name'] }} ({{ tv['first_air_date'].split("-")[0] }})
+          </h5>
+          <h5 class="card-text" style="color: #213465">White Space</h5>
 
-<body>
-  <footer class="footer-container text-center">
-      <div class="container">
-          <div class="row">
-              <div class="col-xs-12">
-                  <p>
-                      Made with 💜 by <a href="https://github.com/Hunajpu" target="_blank" rel="noopener noreferrer">Rodrigo Luna Reyes</a>, <a href="https://github.com/truongnguyenlinh" target="_blank" rel="noopener noreferrer">Linh Truong</a>  and <a href="https://github.com/nanonite9" target="_blank" rel="noopener noreferrer">Ayana Nithey</a>.
-                  </p>
-              </div>
-          </div>
+          <a
+            href="{{ url_for('main.details', type='TV Shows', id=tv['id']) }}"
+            class="btn btn-primary"
+            style="
+              background-color: #e50914;
+              border-color: #213465;
+              position: absolute;
+              bottom: 0;
+              left: 0;
+              right: 0;
+              margin: auto;
+            "
+            >Details</a
+          >
+        </div>
       </div>
-  </footer>
+    </div>
+    {% endfor %}
+  </div>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
-{% endblock %}
+  <body>
+    <footer class="footer-container text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <p>
+              Made with 💜 by
+              <a
+                href="https://github.com/Hunajpu"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Rodrigo Luna Reyes</a
+              >,
+              <a
+                href="https://github.com/truongnguyenlinh"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Linh Truong</a
+              >
+              and
+              <a
+                href="https://github.com/nanonite9"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Ayana Nithey</a
+              >.
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+  {% endblock %}
+</div>
