--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -9,43 +9,36 @@
 	</div>
 	<div class="row justify-content-md-center">
 		<div class="mx-auto text-center" style="width: 300px">
-			<h1 class="h3 mb-3 font-weight-normal login-text" style="color: aliceblue"> Login </h1>
+			<h1 class="h3 mb-3 font-weight-normal login-text" style="color: aliceblue"> Sign Up </h1>
 			<div class="box">
 				{% with messages = get_flashed_messages() %}
 				{% if messages %}
 					<div class="notification is-danger">
-						{{ messages[0] }}
+						{{ messages[0] }}. Go to <a href="{{ url_for('auth.login') }}">login page</a>.
 					</div>
 				{% endif %}
 				{% endwith %}
 			</div>
-			<form class="form-signin" method="POST" action="/login">
-				<div class="box">
-					{% with messages = get_flashed_messages() %}
-					{% if messages %}
-					<div class="notification is-danger">
-						{{ messages[0] }}
-					</div>
-					{% endif %}
-					{% endwith %}
-				</div>
-				<label for="inputUser" class="sr-only">User</label>
+			<form class="form-signin" method="POST"  action="/register">
+				<label for="inputFName" class="sr-only">First Name</label>
+				<input type="text" id="inputFName" class="form-control" placeholder="First Name" name="first_name" required autofocus />
+                <label for="inpuLName" class="sr-only">Last Name</label>
+                <input type="text" id="inpuLName" class="form-control" placeholder="Last Name" name="last_name" required
+					autofocus />
+                <label for="inputEmail" class="sr-only">Email</label>
+                <input type="text" id="inputEmail" class="form-control" placeholder="Email" name="email" required
+					autofocus />
+                <label for="inputUser" class="sr-only">Username</label>
 				<input type="text" id="inputUser" class="form-control" placeholder="Username" name="username" required
 					autofocus />
 				<label for="inputPassword" class="sr-only">Password</label>
 				<input type="password" id="inputPassword" class="form-control" placeholder="Password" name="password"
 					required />
-				<div class="checkbox mb-3">
-					<label style="color: aliceblue">
-						<input type="checkbox" value="remember-me" />
-						Remember me
-					</label>
-				</div>
+
 				<button class="btn btn-lg btn-primary btn-dark btn-block" type="submit"
 					style="background-color: #e50914">
-					Sign in
+					Sign Up
 				</button>
-				<p style="color:grey;">New to FlixList? <a href="{{ url_for('auth.register') }}"> Sign up now.</a></p>
 				<p class="mt-5 mb-3 text-muted">2021</p>
 			</form>
 		</div>
